<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.example.recipes.presentation.ui.recipes.userprofile.dialogs.ChangeProfilePasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDialogChangeProfilePassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog_connection">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvChangeProfilePassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="24dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/etChangeProfilePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etChangeProfilePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:error='@{vm.etPasswordError ? @string/min_length_password : ""}'
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/etConfirmProfilePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangeProfilePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etChangeProfilePasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> vm.setPasswordTextChanged(text)}"
                android:hint="@string/enter_new_password"
                android:maxLength="30"
                android:textSize="14sp"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmProfilePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            app:error='@{vm.etConfirmPasswordError ? @string/value_not_match_password : ""}'
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/btnSubmitPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etChangeProfilePassword" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmProfilePasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> vm.setConfirmPasswordTextChanged(text)}"
                android:hint="@string/confirm_new_password"
                android:maxLength="30"
                android:textSize="14sp"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:onClick="@{() -> vm.submit()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmProfilePassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.cancel()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/btnSubmitPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSubmitPassword"
            app:layout_constraintTop_toTopOf="@id/btnSubmitPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>